--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         </div>
       </div>
       <div class="wrapper grid-about">
-        <p class="description red-text">Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта</p>
-        <div class="contacts">
+        <h1 class="description red-text">Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта</h1>
+        <address class="contacts">
           <p class="phone"><a class="phone-link red-text" href="tel:+78125550555">+7 (812) 555-05-55</a></p>
           <p class="adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-        </div>
+        </address>
         <div class="login">
           <a class="enter" href="#">Войти</a>
           <a class="registration" href="#">Регистрация</a>
@@ -53,8 +53,6 @@
     </header>
 
     <main class="page-main">
-      <h1 class="visually-hidden">Магазин Техномарт.</h1>
-
       <section class="tender wrapper">
         <h2 class="visually-hidden">Что может предложить магазин.</h2>
         <ul class="tender-list">
@@ -90,14 +88,14 @@
                 <p class="text">Настоящие мужские игрушки</p>
               </div>
               <div class="tender-buttons">
-                <a class="button" href="#">
+                <button class="button button-left" href="#">
                   <span class="visually-hidden">Назад</span>
                   <svg width="22" height="40" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"><path d="M19.92.94l2 2.05L4.91 20.44l17.07 17.5-2 2.05L.9 20.44 19.92.94z" fill="#fff"/></svg>
-                </a>
-                <a class="button" href="#">
+                </button>
+                <button class="button button-right" href="#">
                   <span class="visually-hidden">Вперёд</span>
                   <svg width="22" height="40" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"><path d="M2.08 39.06L.08 37l17.01-17.45L.02 2.06l2-2.05L21.1 19.56 2.08 39.06z" fill="#fff"/></svg>
-                </a>
+                </button>
               </div>
               <div class="tender-bottom">
                 <a class="tender-link" href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a>
@@ -113,14 +111,14 @@
                 <p class="text">Соседям на радость!</p>
               </div>
               <div class="tender-buttons">
-                <a class="button" href="#">
+                <button class="button button-left" href="#">
                   <span class="visually-hidden">Назад</span>
                   <svg width="22" height="40" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"><path d="M19.92.94l2 2.05L4.91 20.44l17.07 17.5-2 2.05L.9 20.44 19.92.94z" fill="#fff"/></svg>
-                </a>
-                <a class="button" href="#">
+                </button>
+                <button class="button button-right" href="#">
                   <span class="visually-hidden">Вперёд</span>
                   <svg width="22" height="40" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"><path d="M2.08 39.06L.08 37l17.01-17.45L.02 2.06l2-2.05L21.1 19.56 2.08 39.06z" fill="#fff"/></svg>
-                </a>
+                </button>
               </div>
               <div class="tender-bottom">
                 <a class="tender-link" href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a>
@@ -141,42 +139,42 @@
         </div>
         <ul class="products-list">
           <li class="products-item products-item-margin">
-            <div class="block">
+            <div class="block-one">
               <img class="img" src="img/products-1.png" width="184" height="164" alt="Прекрасная модель.">
             </div>
-            <div class="block">
+            <div class="block-two">
               <h3 class="title">Перфоратор BOSCH BFG 9000</h3>
-              <p class="text">32500 Р.</p>
+              <p class="text text-decoration">32500 Р.</p>
               <p class="text text-sale">25500 Р.</p>
             </div>
           </li>
           <li class="products-item new">
-            <div class="block">
+            <div class="block-one">
               <img class="img" src="img/products-2.png" width="127" height="112" alt="Уникальная модель.">
             </div>
-            <div class="block">
+            <div class="block-two">
               <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
-              <p class="text">22500 Р.</p>
+              <p class="text text-decoration">22500 Р.</p>
               <p class="text text-sale">15500 Р.</p>
             </div>
           </li>
           <li class="products-item">
-            <div class="block">
+            <div class="block-one">
               <img class="img" src="img/products-3.png" width="144" height="128" alt="Вам понравиться.">
             </div>
-            <div class="block">
+            <div class="block-two">
               <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
-              <p class="text">30500 Р.</p>
+              <p class="text text-decoration">30500 Р.</p>
               <p class="text text-sale">25500 Р.</p>
             </div>
           </li>
           <li class="products-item new">
-            <div class="block">
+            <div class="block-one">
               <img class="img" src="img/products-4.png" width="127" height="112" alt="Одна из лучших новинок.">
             </div>
-            <div class="block">
+            <div class="block-two">
               <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
-              <p class="text">22500 Р.</p>
+              <p class="text text-decoration">22500 Р.</p>
               <p class="text text-sale">12500 Р.</p>
             </div>
           </li>
@@ -190,28 +188,28 @@
         </div>
         <ul class="makers-list">
           <li class="makers-item">
-            <a href="#"><img class="img" src="img/makers-1.png" width="126" height="37" alt="Bosch."></a>
+            <a class="makers-link" href="#"><img class="img" src="img/makers-1.png" width="126" height="37" alt="Bosch."></a>
           </li>
           <li class="makers-item">
-            <a href="#"><img class="img" src="img/makers-2.png" width="123" height="40" alt="Makita."></a>
+            <a class="makers-link" href="#"><img class="img" src="img/makers-2.png" width="123" height="40" alt="Makita."></a>
           </li>
           <li class="makers-item">
-            <a href="#"><img class="img" src="img/makers-3.png" width="146" height="44" alt="DeWALT."></a>
+            <a class="makers-link" href="#"><img class="img" src="img/makers-3.png" width="146" height="44" alt="DeWALT."></a>
           </li>
           <li class="makers-item">
-            <a href="#"><img class="img" src="img/makers-4.png" width="200" height="76" alt="Интерскол."></a>
+            <a class="makers-link" href="#"><img class="img" src="img/makers-4.png" width="200" height="76" alt="Интерскол."></a>
           </li>
           <li class="makers-item">
-            <a href="#"><img class="img" src="img/makers-5.png" width="169" height="31" alt="HITACHI."></a>
+            <a class="makers-link" href="#"><img class="img" src="img/makers-5.png" width="169" height="31" alt="HITACHI."></a>
           </li>
           <li class="makers-item">
-            <a href="#"><img class="img" src="img/makers-6.png" width="121" height="73" alt="LG."></a>
+            <a class="makers-link" href="#"><img class="img" src="img/makers-6.png" width="121" height="73" alt="LG."></a>
           </li>
           <li class="makers-item">
-            <a href="#"><img class="img" src="img/makers-7.png" width="151" height="98" alt="AEG power solutions."></a>
+            <a class="makers-link" href="#"><img class="img" src="img/makers-7.png" width="151" height="98" alt="AEG power solutions."></a>
           </li>
           <li class="makers-item">
-            <a href="#"><img class="img" src="img/makers-8.png" width="206" height="73" alt="Metabo work. don't play."></a>
+            <a class="makers-link" href="#"><img class="img" src="img/makers-8.png" width="206" height="73" alt="Metabo work. don't play."></a>
           </li>
         </ul>
       </section>
@@ -221,9 +219,9 @@
           <h2 class="title">Сервисы</h2>
           <p class="text">Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
           <ul class="services-list">
-            <li class="services-item services-item-active"><a class="link link-active" href="#">Доставка</a></li>
-            <li class="services-item"><a class="link" href="#">Гарантия</a></li>
-            <li class="services-item"><a class="link" href="#">Кредит</a></li>
+            <li class="services-item"><button class="link link-active" href="#">Доставка</button></li>
+            <li class="services-item"><button class="link" href="#">Гарантия</button></li>
+            <li class="services-item"><button class="link" href="#">Кредит</button></li>
           </ul>
           <div class="services-block">
             <img class="img" src="img/truck.png" width="468" height="261" alt="Большой грузовик с синим тентом.">
@@ -313,7 +311,7 @@
             </li>
           </ul>
           <p class="text text-feedback">Обратная связь:
-            <a class="link" href="#">mail@htmlacademy.ru</a>
+            <a class="link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
           </p>
           <p class="text text-made">Разработано —
             <a class="link" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
