--- a/index.html
+++ b/index.html
@@ -21,22 +21,19 @@
         </ul>
       </nav>
       <div class="results">
-        <div class="wrapper">
+        <div class="container wrapper">
           <a class="main-logo">
             <img class="logo" src="img/logo-technomart.png" width="107" height="17" alt="Логотип магазина Техномарт.">
           </a>
           <form class="search-form" method="get" action="https://echo.htmlacademy.ru/">
-            <label class="label label-search">
-              <input class="input-search" type="search" name="search" placeholder="Поиск:">
-            </label>
-            <label class="label label-save-marks">Закладки:
-              <input class="input" type="number" name="save-marks" placeholder="0">
-            </label>
-            <label class="label label-basket">Корзина:
-              <input type="number" name="basket" placeholder="0">
-            </label>
-            <button class="order" type="button">Оформить заказ</button>
+            <input class="input-search" type="search" name="search" placeholder="Поиск:" id="id-search">
+            <label class="label label-search" for="id-search"></label>
           </form>
+          <ul class="order-list">
+            <li class="order-item"><a class="order-link order-link-bookmarks" href="#">Закладки: 0</a></li>
+            <li class="order-item"><a class="order-link order-link-basket" href="#">Корзина: 0</a></li>
+          </ul>
+          <a class="order" type="button">Оформить заказ</a>
         </div>
       </div>
       <div class="wrapper grid-about">
@@ -320,9 +317,9 @@
       </div>
     </footer>
 
-    <section class="modal-form">
+    <section class="modal-form modal-position modal-hidden">
       <h2 class="visually-hidden"></h2>
-      <form class="form" method="get" action="https://echo.htmlacademy.ru/">
+      <form class="form" method="post" action="https://echo.htmlacademy.ru/">
         <div class="form-wrapper">
           <div class="form-block">
             <div class="block">
@@ -335,7 +332,7 @@
             </div>
           </div>
           <label class="label" for="text">Текст письма:</label>
-          <textarea class="textarea" id="text" placeholder="В свободной форме"></textarea>
+          <textarea class="textarea" id="text" name="text" placeholder="В свободной форме"></textarea>
         </div>
         <div class="form-button-block">
           <button class="form-button" type="submit">Отправить</button>
@@ -347,7 +344,7 @@
       </button>
     </section>
 
-    <section class="modal-map">
+    <section class="modal-map modal-position modal-hidden">
       <h2 class="visually-hidden">Карта расположения магазина</h2>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3997.0831804839117!2d30.313455781649978!3d59.93974846989791!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1604688287291!5m2!1sru!2sru" width="943" height="442" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0" title="Адрес магазина: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8"></iframe>
       <button class="button-close" type="button">
