Изменение тега, добавление атрибутов для svg

--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@
             <div class="block-one">
               <img class="img" src="img/products-1.png" width="184" height="164" alt="Прекрасная модель.">
             </div>
+<!--             <div class=" block-one products-button">
+              <a class="button button-buy" type="button">КУПИТЬ</a>
+              <button class="button button-bookmark" type="button">В закладки</button>
+            </div> -->
             <div class="block-two">
               <h3 class="title">Перфоратор BOSCH BFG 9000</h3>
               <p class="text text-decoration">32500 Р.</p>
