--- a/catalog.html
+++ b/catalog.html
@@ -47,7 +47,7 @@
             <a class="name">Равшан Джамшутович</a>
             <a class="exit" href="#">
               <span class="visually-hidden">Выход</span>
-              <svg width="20" height="18" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 9L11.12.5v6h-6v5h6v6L20 9z" fill="#C5C5C5"/><path d="M2.1 14.45V3.55c.02-.38.18-1.06 1.02-1.06h5.02V.5H3.12C.94.5.12 2.31.09 3.53v10.94C.1 15.7.94 17.5 3.12 17.5h5.02v-1.99H3.12c-.84 0-1-.68-1.01-1.06z" fill="#C5C5C5"/></svg>
+              <svg width="20" height="18" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"><path d="M20 9L11.12.5v6h-6v5h6v6L20 9z" fill="#C5C5C5"/><path d="M2.1 14.45V3.55c.02-.38.18-1.06 1.02-1.06h5.02V.5H3.12C.94.5.12 2.31.09 3.53v10.94C.1 15.7.94 17.5 3.12 17.5h5.02v-1.99H3.12c-.84 0-1-.68-1.01-1.06z" fill="#C5C5C5"/></svg>
             </a>
           </div>
           <ul class="on-list">
@@ -169,7 +169,7 @@
           </li>
           <li class="products-item new products-item-active">
             <div class=" block-one products-button">
-              <button class="button button-buy" type="button">КУПИТЬ</button>
+              <a class="button button-buy" type="button">КУПИТЬ</a>
               <button class="button button-bookmark" type="button">В закладки</button>
             </div>
             <div class="block-two">
