Добавление JS, подключение и минификация

--- a/catalog.html
+++ b/catalog.html
@@ -12,12 +12,12 @@
       <nav class="main-nav wrapper">
         <ul class="nav-list">
           <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Компания</a></li>
+          <li class="nav-item"><a class="nav-link" href="blank.html">Компания</a></li>
           <li class="nav-item"><a class="nav-link">Каталог</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Новости</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Спецпредложения</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Доставка</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Контакты</a></li>
+          <li class="nav-item"><a class="nav-link" href="blank.html">Новости</a></li>
+          <li class="nav-item"><a class="nav-link" href="blank.html">Спецпредложения</a></li>
+          <li class="nav-item"><a class="nav-link" href="blank.html">Доставка</a></li>
+          <li class="nav-item"><a class="nav-link" href="blank.html">Контакты</a></li>
         </ul>
       </nav>
       <div class="results">
@@ -33,7 +33,7 @@
             <li class="order-item"><a class="order-link order-link-bookmarks" href="#">Закладки: 0</a></li>
             <li class="order-item"><a class="order-link order-link-basket order-link-active" href="#">Корзина: 10</a></li>
           </ul>
-          <a class="order" type="button">Оформить заказ</a>
+          <a href="#" class="order">Оформить заказ</a>
         </div>
       </div>
       <div class="wrapper grid-about">
@@ -44,7 +44,7 @@
         </address>
         <div class="login-on">
           <div class="block">
-            <a class="name">Равшан Джамшутович</a>
+            <a class="name" href="#">Равшан Джамшутович</a>
             <a class="exit" href="#">
               <span class="visually-hidden">Выход</span>
               <svg width="20" height="18" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"><path d="M20 9L11.12.5v6h-6v5h6v6L20 9z" fill="#C5C5C5"/><path d="M2.1 14.45V3.55c.02-.38.18-1.06 1.02-1.06h5.02V.5H3.12C.94.5.12 2.31.09 3.53v10.94C.1 15.7.94 17.5 3.12 17.5h5.02v-1.99H3.12c-.84 0-1-.68-1.01-1.06z" fill="#C5C5C5"/></svg>
@@ -169,7 +169,7 @@
           </li>
           <li class="products-item new products-item-active">
             <div class=" block-one products-button">
-              <a class="button button-buy" type="button">КУПИТЬ</a>
+              <a href="#" class="button button-buy">КУПИТЬ</a>
               <button class="button button-bookmark" type="button">В закладки</button>
             </div>
             <div class="block-two">
@@ -263,15 +263,15 @@
           <p class="text">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
         </div>
         <ul class="footer-list">
-          <li class="footer-item"><a class="link" href="#">Компания</a></li>
-          <li class="footer-item"><a class="link" href="#">Новости</a></li>
-          <li class="footer-item"><a class="link" href="catalog.html">Каталог</a></li>
-          <li class="footer-item"><a class="link" href="#">Доставка</a></li>
-          <li class="footer-item"><a class="link" href="#">Контакты</a></li>
-          <li class="footer-item"><a class="link" href="#">Материалы</a></li>
-          <li class="footer-item"><a class="link" href="#">Техника</a></li>
-          <li class="footer-item"><a class="link" href="#">Инструмент</a></li>
-          <li class="footer-item"><a class="link" href="#">Спецпредложения</a></li>
+          <li class="footer-item"><a class="link" href="blank.html">Компания</a></li>
+          <li class="footer-item"><a class="link" href="blank.html">Новости</a></li>
+          <li class="footer-item"><a class="link">Каталог</a></li>
+          <li class="footer-item"><a class="link" href="blank.html">Доставка</a></li>
+          <li class="footer-item"><a class="link" href="blank.html">Контакты</a></li>
+          <li class="footer-item"><a class="link" href="blank.html">Материалы</a></li>
+          <li class="footer-item"><a class="link" href="blank.html">Техника</a></li>
+          <li class="footer-item"><a class="link" href="blank.html">Инструмент</a></li>
+          <li class="footer-item"><a class="link" href="blank.html">Спецпредложения</a></li>
         </ul>
       </div>
       <div class="footer-block">
@@ -314,11 +314,11 @@
         <button class="button continue -button" type="submit">Продолжить покупки</button>
       </div>
       <button class="button-close" type="button">
-        <span class="visually-hidden">Закрыть</span>
-        <img src="img/icon-close.svg" width="21" height="21">
+        <img src="img/icon-close.svg" width="21" height="21" alt="Закрыть">
       </button>
     </section>
 
+    <script src="js/popup-catalog.min.js"></script>
 
   </body>
 </html>
