--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       <nav class="main-nav wrapper">
         <ul class="nav-list">
           <li class="nav-item"><a class="nav-link">Главная</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Компания</a></li>
+          <li class="nav-item"><a class="nav-link" href="blank.html">Компания</a></li>
           <li class="nav-item"><a class="nav-link" href="catalog.html">Каталог</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Новости</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Спецпредложения</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Доставка</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Контакты</a></li>
+          <li class="nav-item"><a class="nav-link" href="blank.html">Новости</a></li>
+          <li class="nav-item"><a class="nav-link" href="blank.html">Спецпредложения</a></li>
+          <li class="nav-item"><a class="nav-link" href="blank.html">Доставка</a></li>
+          <li class="nav-item"><a class="nav-link" href="blank.html">Контакты</a></li>
         </ul>
       </nav>
       <div class="results">
@@ -33,7 +33,7 @@
             <li class="order-item"><a class="order-link order-link-bookmarks" href="#">Закладки: 0</a></li>
             <li class="order-item"><a class="order-link order-link-basket" href="#">Корзина: 0</a></li>
           </ul>
-          <a class="order" type="button">Оформить заказ</a>
+          <a href="#" class="order">Оформить заказ</a>
         </div>
       </div>
       <div class="wrapper grid-about">
@@ -85,11 +85,11 @@
                 <p class="text">Настоящие мужские игрушки</p>
               </div>
               <div class="tender-buttons">
-                <button class="button button-left" href="#">
+                <button class="button button-left">
                   <span class="visually-hidden">Назад</span>
                   <svg width="22" height="40" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"><path d="M19.92.94l2 2.05L4.91 20.44l17.07 17.5-2 2.05L.9 20.44 19.92.94z" fill="#fff"/></svg>
                 </button>
-                <button class="button button-right" href="#">
+                <button class="button button-right">
                   <span class="visually-hidden">Вперёд</span>
                   <svg width="22" height="40" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"><path d="M2.08 39.06L.08 37l17.01-17.45L.02 2.06l2-2.05L21.1 19.56 2.08 39.06z" fill="#fff"/></svg>
                 </button>
@@ -108,11 +108,11 @@
                 <p class="text">Соседям на радость!</p>
               </div>
               <div class="tender-buttons">
-                <button class="button button-left" href="#">
+                <button class="button button-left">
                   <span class="visually-hidden">Назад</span>
                   <svg width="22" height="40" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"><path d="M19.92.94l2 2.05L4.91 20.44l17.07 17.5-2 2.05L.9 20.44 19.92.94z" fill="#fff"/></svg>
                 </button>
-                <button class="button button-right" href="#">
+                <button class="button button-right">
                   <span class="visually-hidden">Вперёд</span>
                   <svg width="22" height="40" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"><path d="M2.08 39.06L.08 37l17.01-17.45L.02 2.06l2-2.05L21.1 19.56 2.08 39.06z" fill="#fff"/></svg>
                 </button>
@@ -140,7 +140,7 @@
               <img class="img" src="img/products-1.png" width="184" height="164" alt="Прекрасная модель.">
             </div>
 <!--             <div class=" block-one products-button">
-              <a class="button button-buy" type="button">КУПИТЬ</a>
+              <a href="#" class="button button-buy" type="button">КУПИТЬ</a>
               <button class="button button-bookmark" type="button">В закладки</button>
             </div> -->
             <div class="block-two">
@@ -220,9 +220,9 @@
           <h2 class="title">Сервисы</h2>
           <p class="text">Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
           <ul class="services-list">
-            <li class="services-item"><button class="link link-active" href="#">Доставка</button></li>
-            <li class="services-item"><button class="link" href="#">Гарантия</button></li>
-            <li class="services-item"><button class="link" href="#">Кредит</button></li>
+            <li class="services-item"><button class="link link-active">Доставка</button></li>
+            <li class="services-item"><button class="link">Гарантия</button></li>
+            <li class="services-item"><button class="link">Кредит</button></li>
           </ul>
           <div class="services-block">
             <img class="img" src="img/truck.png" width="468" height="261" alt="Большой грузовик с синим тентом.">
@@ -262,7 +262,7 @@
           <h2 class="title">КОНТАКТЫ</h2>
           <p class="text">Вы можете забрать товар сами, заехав в наш офис:</p>
           <a class="link-map" href="#"><img class="map" src="img/map.jpg" width="300" height="158" alt="Карта, где мы находимся."></a>
-          <a class="link" href="#">Заблудились? НапиШИТЕ НАМ!</a>
+          <a class="link link-form" href="#">Заблудились? НапиШИТЕ НАМ!</a>
         </section>
       </div>
 
@@ -277,15 +277,15 @@
           <p class="text">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
         </div>
         <ul class="footer-list">
-          <li class="footer-item"><a class="link" href="#">Компания</a></li>
-          <li class="footer-item"><a class="link" href="#">Новости</a></li>
+          <li class="footer-item"><a class="link" href="blank.html">Компания</a></li>
+          <li class="footer-item"><a class="link" href="blank.html">Новости</a></li>
           <li class="footer-item"><a class="link" href="catalog.html">Каталог</a></li>
-          <li class="footer-item"><a class="link" href="#">Доставка</a></li>
-          <li class="footer-item"><a class="link" href="#">Контакты</a></li>
-          <li class="footer-item"><a class="link" href="#">Материалы</a></li>
-          <li class="footer-item"><a class="link" href="#">Техника</a></li>
-          <li class="footer-item"><a class="link" href="#">Инструмент</a></li>
-          <li class="footer-item"><a class="link" href="#">Спецпредложения</a></li>
+          <li class="footer-item"><a class="link" href="blank.html">Доставка</a></li>
+          <li class="footer-item"><a class="link" href="blank.html">Контакты</a></li>
+          <li class="footer-item"><a class="link" href="blank.html">Материалы</a></li>
+          <li class="footer-item"><a class="link" href="blank.html">Техника</a></li>
+          <li class="footer-item"><a class="link" href="blank.html">Инструмент</a></li>
+          <li class="footer-item"><a class="link" href="blank.html">Спецпредложения</a></li>
         </ul>
       </div>
       <div class="footer-block">
@@ -322,7 +322,7 @@
     </footer>
 
     <section class="modal-form modal-position modal-hidden">
-      <h2 class="visually-hidden"></h2>
+      <h2 class="visually-hidden">Форма обратной связи</h2>
       <form class="form" method="post" action="https://echo.htmlacademy.ru/">
         <div class="form-wrapper">
           <div class="form-block">
@@ -343,19 +343,19 @@
         </div>
       </form>
       <button class="button-close" type="button">
-        <span class="visually-hidden">Закрыть</span>
-        <img src="img/icon-close.svg" width="21" height="21">
+        <img src="img/icon-close.svg" width="21" height="21" alt="Закрыть">
       </button>
     </section>
 
     <section class="modal-map modal-position modal-hidden">
       <h2 class="visually-hidden">Карта расположения магазина</h2>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3997.0831804839117!2d30.313455781649978!3d59.93974846989791!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1604688287291!5m2!1sru!2sru" width="943" height="442" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0" title="Адрес магазина: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3997.0831804839117!2d30.313455781649978!3d59.93974846989791!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1604688287291!5m2!1sru!2sru" width="943" height="442" allowfullscreen="" aria-hidden="false" tabindex="0" title="Адрес магазина: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8"></iframe>
       <button class="button-close" type="button">
-        <span class="visually-hidden">Закрыть</span>
-        <img src="img/icon-close.svg" width="21" height="21">
+        <img src="img/icon-close.svg" width="21" height="21" alt="Закрыть">
       </button>
     </section>
+
+    <script src="js/popup.min.js"></script>
 
   </body>
 </html>
