Исправление поиска и добавление vertical-align

--- a/blank.html
+++ b/blank.html
@@ -26,8 +26,9 @@
             <img class="logo" src="img/logo-technomart.png" width="107" height="17" alt="Логотип магазина Техномарт.">
           </a>
           <form class="search-form" method="get" action="https://echo.htmlacademy.ru/">
-            <input class="input-search" type="search" name="search" placeholder="Поиск:" id="id-search">
-            <label class="label label-search" for="id-search"></label>
+            <label class="label label-search" for="id-search">
+              <input class="input-search" type="search" name="search" placeholder="Поиск:" id="id-search">
+            </label>
           </form>
           <ul class="order-list">
             <li class="order-item"><a class="order-link order-link-bookmarks" href="#">Закладки: 0</a></li>
