--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
             <img class="logo" src="img/logo-technomart.png" width="107" height="17" alt="Логотип магазина Техномарт.">
           </a>
           <form class="search-form" method="get" action="https://echo.htmlacademy.ru/">
-            <input class="input-search" type="search" name="search" placeholder="Поиск:" id="id-search">
-            <label class="label label-search" for="id-search"></label>
+            <label class="label label-search" for="id-search">
+              <input class="input-search" type="search" name="search" placeholder="Поиск:" id="id-search">
+            </label>
           </form>
           <ul class="order-list">
             <li class="order-item"><a class="order-link order-link-bookmarks" href="#">Закладки: 0</a></li>
@@ -85,11 +86,11 @@
                 <p class="text">Настоящие мужские игрушки</p>
               </div>
               <div class="tender-buttons">
-                <button class="button button-left">
+                <button class="button button-left" type="button">
                   <span class="visually-hidden">Назад</span>
                   <svg width="22" height="40" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"><path d="M19.92.94l2 2.05L4.91 20.44l17.07 17.5-2 2.05L.9 20.44 19.92.94z" fill="#fff"/></svg>
                 </button>
-                <button class="button button-right">
+                <button class="button button-right" type="button">
                   <span class="visually-hidden">Вперёд</span>
                   <svg width="22" height="40" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"><path d="M2.08 39.06L.08 37l17.01-17.45L.02 2.06l2-2.05L21.1 19.56 2.08 39.06z" fill="#fff"/></svg>
                 </button>
@@ -108,11 +109,11 @@
                 <p class="text">Соседям на радость!</p>
               </div>
               <div class="tender-buttons">
-                <button class="button button-left">
+                <button class="button button-left" type="button">
                   <span class="visually-hidden">Назад</span>
                   <svg width="22" height="40" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"><path d="M19.92.94l2 2.05L4.91 20.44l17.07 17.5-2 2.05L.9 20.44 19.92.94z" fill="#fff"/></svg>
                 </button>
-                <button class="button button-right">
+                <button class="button button-right" type="button">
                   <span class="visually-hidden">Вперёд</span>
                   <svg width="22" height="40" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"><path d="M2.08 39.06L.08 37l17.01-17.45L.02 2.06l2-2.05L21.1 19.56 2.08 39.06z" fill="#fff"/></svg>
                 </button>
@@ -140,7 +141,7 @@
               <img class="img" src="img/products-1.png" width="184" height="164" alt="Прекрасная модель.">
             </div>
 <!--             <div class=" block-one products-button">
-              <a href="#" class="button button-buy" type="button">КУПИТЬ</a>
+              <a href="#" class="button button-buy">КУПИТЬ</a>
               <button class="button button-bookmark" type="button">В закладки</button>
             </div> -->
             <div class="block-two">
@@ -220,9 +221,9 @@
           <h2 class="title">Сервисы</h2>
           <p class="text">Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
           <ul class="services-list">
-            <li class="services-item"><button class="link link-active">Доставка</button></li>
-            <li class="services-item"><button class="link">Гарантия</button></li>
-            <li class="services-item"><button class="link">Кредит</button></li>
+            <li class="services-item"><button class="link link-active" type="button">Доставка</button></li>
+            <li class="services-item"><button class="link" type="button">Гарантия</button></li>
+            <li class="services-item"><button class="link" type="button">Кредит</button></li>
           </ul>
           <div class="services-block">
             <img class="img" src="img/truck.png" width="468" height="261" alt="Большой грузовик с синим тентом.">
